--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -6,25 +6,25 @@ Fonts are separated by a & */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
+  --primary-color: #2d5e80   ;
   --secondary-color: #e9c46a ;
-  --accent1-color: #000000;
-  --accent2-color: white;
+  --accent1-color: #2d5e80;
+  --accent2-color: #f4b889;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Rock Salt";
   --paragraph-font: Fredoka, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
+  --headline-color-on-white: #2d5e80;  /* headlines on a white background */ 
   --headline-color-on-color: rgb(0, 0, 0); /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
+  --paragraph-color-on-white: #2d5e80; /* paragraph text on a white background */ 
   --paragraph-color-on-color: #396E94; /* paragraph text on a colored background */ 
   --paragraph-background-color: #f4b889  ;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
-  --nav-hover-link-color: rgb(240, 234, 222);
-  --nav-hover-background-color: #396E94;
+  --nav-link-color: #2d5e80;
+  --nav-background-color: #f4b889;
+  --nav-hover-link-color: #2d5e80;
+  --nav-hover-background-color: #2d5e80;
 }
 
 
