site plan added 2

--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -8,7 +8,7 @@ Fonts are separated by a & */
   /* change the values below to your colors from your palette */
   --primary-color: #2d5e80   ;
   --secondary-color: #e9c46a ;
-  --accent1-color: #2d5e80;
+  --accent1-color: #000000;
   --accent2-color: #f4b889;
 
   /* change the values below to your chosen font(s) */
