--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -23,7 +23,7 @@ Fonts are separated by a & */
   --paragraph-background-color: #f4b889  ;
   --nav-link-color: #2d5e80;
   --nav-background-color: #f4b889;
-  --nav-hover-link-color: #2d5e80;
+  --nav-hover-link-color: #b3c8d7;
   --nav-hover-background-color: #2d5e80;
 }
 
