--- a/practice/ice2/styles/ice2.css
+++ b/practice/ice2/styles/ice2.css
@@ -1,7 +1,10 @@
+*{
+    margin: 0;
+}
+
 .container{
     margin: 0 auto;
     width: 100%;
-    max-width: 1200px;
     box-sizing: border-box;
 }
 body {
