--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -2,7 +2,7 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a & */
-@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Rock+Salt&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&family=Rock+Salt&family=Shadows+Into+Light&family=Unkempt:wght@400;700&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
@@ -13,7 +13,7 @@ Fonts are separated by a & */
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Rock Salt";
-  --paragraph-font: Fredoka, Helvetica, sans-serif;
+  --paragraph-font: "Playwrite England SemiJoined", "Shadows Into Light", sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #2d5e80;  /* headlines on a white background */ 
