--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -1,5 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&family=Rock+Salt&family=Shadows+Into+Light&family=Unkempt:wght@400;700&display=swap');
+
+h1, h2, h4 {
+    font-family: 'Playwrite GB S', 'Rock Salt', 'Unkempt', 'Arial', 'sans-serif'; /* Headline font with backups */
+}
 body{
     background-color:#e9c46a;
+    font-family: 'Indie Flower', 'Shadows Into Light', 'Arial', 'sans-serif'; /* Body font with backups */
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+}
+h2{
+    margin: 0;
 }
 header {
     background-color:#2d5e80 ;
@@ -17,6 +29,7 @@ nav a {
     text-align: center;
     color: white;
     text-decoration: none;
+    padding: 35px;
 }
 
 #hero-msg h1, #hero-msg h4{
@@ -37,28 +50,54 @@ main section{
 }
 .msg{
     background-color: #e9c46a;
+    background-color: white;
+    line-height: 1.5em;
+    padding: 35px;
 }
 footer{
     background-color: #2d5e80;
     color: black;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 .book, .join{
-    background-color: #c79924;
-    color: #2d5e80;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
-.book:hover, .join:hover{
-    background-color: #c79924;
+.book{
+    background-color: #c79924; opacity: 100%;
     color: #2d5e80;
+}
+.book:hover{
+    background-color: #c79924; opacity: 80%;
+    color: white;
+}
+.join{
+    background-color: #c79924;
+    color: white;
+}
+.join:hover{
+    background-color: #2d5e80;
+    color: #c79924;
+}
+.icon{
+    padding-top: 10px;
 }
 .msg h2{
     color: #2d5e80;
 }
 .msg p{
     color: #2d5e80;
+    font-size: 1.1em;
+    padding-bottom: 15px;
 }
 .home-title{
     color: black;
+    font-size: 2em;
+    margin-top: 10px;
 }
 h4{
     color: black;
@@ -76,6 +115,21 @@ footer p{
 .logo{
     width: 80px;
 }
+#logo_link{
+    padding-top: 5px;
+}
 footer p a:hover {
     text-decoration: underline;
 } 
+footer .social img{
+    padding-top: 15px;
+}
+.rivers-card, .camping-card, .rapids-card{
+    margin: 200px 0;
+}
+.card-img{
+    border: 10px solid #e9c46a;
+}
+main section img {
+    box-sizing: border-box;
+}
