--- a/positionstyles.css
+++ b/positionstyles.css
@@ -33,74 +33,97 @@
 /* Activity 2 styles */ 
 .content2 {
   /* This is the parent of the activity 2 boxes. */
+  display: grid;
+  grid-template-columns: repeat(5, 30px);
+  gap: 20px;
+  grid-template-rows: repeat(5, 30px);
 }
 .red2 {
   width: 100px; 
   height: 100px; 
   background-color: red; 
+  grid-column: 1/3;
+  grid-row: 1/3;
 } 
 .green2 { 
   width: 100px; 
   height: 100px; 
   background-color: green; 
+  grid-column: 2/4;
+  grid-row: 2/4;
 } 
 .yellow2 {
   width: 100px; 
   height: 100px; 
   background-color: gold; 
+  grid-column: 3/5;
+  grid-row: 3/5;
 } 
 .blue2 {
   width: 100px; 
   height: 100px; 
   background-color: blue; 
+  grid-column: 4/6;
+  grid-row: 4/6;
 } 
 /* Activity 3 styles */ 
 .content3 {
   /* This is the parent of the activity 3 boxes. */
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 .red3 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: red; 
+  grid-column: 1 / span 3;
 } 
 .green3 {
-  width: 100px; 
-  height: 100px; 
+  width: 80%; 
+  height: 250px; 
   background-color: green;
+  grid-column: 1 /2;
 } 
 .yellow3 {
-  width: 100px; 
-  height: 100px; 
+  width: 80%; 
+  height: 250px; 
   background-color: gold; 
+  grid-column: 2/3;
+  justify-self: right;
 } 
 .blue3 {
-  width: 100px;
+  width: 100%;
   height: 100px; 
-  background-color: blue; 
+  background-color: blue;
+  grid-column: 1 / span 3;
 } 
 /* Activity 4 styles */ 
 .content4 {
   /* This is the parent of the activity 4 boxes. */
   height: 400px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 .red4 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: red; 
+  grid-column: 1/2;
+  grid-row: 1/4;
 } 
 .green4 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: green; 
 } 
 .yellow4 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: gold; 
 } 
 .blue4 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: blue; 
 } 
 /* Activity 5 styles */ 
@@ -109,50 +132,68 @@
   height: 400px;
 }
 .red5 { 
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: red; 
 } 
 .green5 { 
-  width: 100px; 
-  height: 100px; 
+  width: 145px; 
+  height: 150px; 
   background-color: green; 
+  float: left;
 
 } 
 .yellow5 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 300px; 
   background-color: gold; 
 
 } 
 .blue5 {
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: blue; 
 } 
 /* Activity 6 styles */ 
 .content6 {
   /* This is the parent of the activity 6 boxes. */
+  width: 600px;
+  height: 600px;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(6, 1fr);
 }
 .red6 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: red; 
+  grid-row: 1/3;
+  grid-column: 1/5;
+  z-index: 0;
 } 
 .green6 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: green; 
+  grid-row: 5/7;
+  grid-column: 1/3;
+  z-index: 3;
 } 
 .yellow6 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: gold; 
+  grid-row: 3/7;
+  grid-column: 5/7;
+  z-index: 2;
 } 
 .blue6 {
-  width: 100px; 
-  height: 100px; 
-  background-color: blue; 
+  width: 100%; 
+  height: 100%; 
+  background-color: blue;
+  grid-column: 2/6;
+  grid-row: 2/6; 
+  z-index: 1;
 } 
 
 
