--- a/positionstyles.css
+++ b/positionstyles.css
@@ -157,6 +157,8 @@
 /* Activity 6 styles */ 
 .content6 {
   /* This is the parent of the activity 6 boxes. */
+  margin: 0 auto;
+  border: black;
   width: 600px;
   height: 600px;
   display: grid;
