--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -15,6 +15,12 @@ h2{
 }
 header {
     background-color:#2d5e80 ;
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+nav {
+    display: flex;
+    justify-content: space-around;
 }
 nav a:hover {
     background-color: black;
@@ -31,19 +37,64 @@ nav a {
     text-decoration: none;
     padding: 35px;
 }
-
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+}
+#hero-box{
+    grid-column: 1/4;
+    grid-row: 1/3;
+}
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+}
+#hero-msg h4{
+    color: white;
+}
+#hero-msg h1{
+    color:#c79924;
+}
+#hero-img{
+    width: 100%;
+}
 #hero-msg h1, #hero-msg h4{
     text-align: center;
 }
-
 .button-box{
     text-align: center;
 }
-
+.home-grid{
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
+.card-img, .mountains {
+    width: 100%;
+}
+.rivers-card{
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card{
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card{
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+#background{
+    grid-column: 1/11;
+    grid-row: 4/9;
+}
+.mountains{
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
 main section{
     text-align: center;
 }
-
 #background {
     height: 725px;
     background-color: #e9c46a;
@@ -51,14 +102,20 @@ main section{
 .msg{
     background-color: #e9c46a;
     background-color: white;
+    grid-column: 6/10;
+    grid-row: 6/7;
     line-height: 1.5em;
     padding: 35px;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 footer{
     background-color: #2d5e80;
     color: black;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 .book, .join{
     text-decoration: none;
@@ -117,6 +174,8 @@ footer p{
 }
 #logo_link{
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 footer p a:hover {
     text-decoration: underline;
@@ -129,7 +188,78 @@ footer .social img{
 }
 .card-img{
     border: 10px solid #e9c46a;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #424d52;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
 }
 main section img {
     box-sizing: border-box;
+}
+
+
+
+
+
+
+
+
+
+
+/*Media query*/ 
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    #hero-msg h1 {
+        color: #6f7364;
+    }
+    .home-title {
+        font-size: 25px;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
