--- a/herophoto/styles/site-plan.css
+++ b/herophoto/styles/site-plan.css
@@ -1,14 +1,14 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato');
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&family=Rock+Salt&family=Shadows+Into+Light&family=Unkempt:wght@400;700&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
-  --accent2-color: white;
+  --primary-color: rgb(88, 204, 90) ;
+  --secondary-color: #a27e44 ;
+  --accent1-color: #8ad3c9;
+  --accent2-color: black;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "IM Fell French Canon SC";
