--- a/practice/ice1/styles/ice-challenge.css
+++ b/practice/ice1/styles/ice-challenge.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 0 auto;
+    margin: 50, 50;
     padding: 0;
     background-color: #2874ab;
     display: flex;
