--- a/practice/ice5/styles/ice-challenge.css
+++ b/practice/ice5/styles/ice-challenge.css
@@ -25,7 +25,7 @@ ul{
     display: grid;
     grid-template-columns: 1fr;
     height: 500px;
-    width: 20%;
+    width: 21.5%;
     border-radius: 20px;
     background: white;
     border: 5px black solid;
@@ -38,8 +38,8 @@ ul{
 }
 
 .img{
-    width: 300px;
-    height: 310px;
+    width: 312px;
+    height: 280px;
     overflow-clip-margin: content-box;
     overflow: clip;
 }
@@ -60,4 +60,8 @@ ul{
 .base div.between {
     border-left: 1px solid grey;
     border-right: 1px solid grey;
+}
+.chalk{
+    text-align: center;
+    width: 320px;
 }
