--- a/practice/ice5/styles/ice-challenge.css
+++ b/practice/ice5/styles/ice-challenge.css
@@ -24,7 +24,7 @@ h4, h1 {
 ul{
     display: grid;
     grid-template-columns: 1fr;
-    height: 500px;
+    height: 500x;
     width: 21.5%;
     border-radius: 20px;
     background: white;
