--- a/herophoto/styles/logstyle.css
+++ b/herophoto/styles/logstyle.css
@@ -24,8 +24,8 @@ body{
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
     padding-top: 60px;
   }
-  .herolog {
-    size: 200 x 200
+  .herolog img {
+    size: 100 x 100
   }
   /* Modal Content/Box */
   .modal-content {
